# apertium-arg

./: .gitattributes  AUTHORS  Makefile.am  NEWS  apertium-arg.arg.dix  apertium-arg.arg.prefs.rlx  apertium-arg.arg.rlx  apertium-arg.arg.tsx  apertium-arg.pc.in  apertium-arg.post-arg.dix  arg.preferences.xml  arg.prob  configure.ac  modes.xml
test/: analysis-input.txt  analysis-morph-expected.txt  tests.json
